beginning of styling done

--- a/app/views/queue_positions/new.html.erb
+++ b/app/views/queue_positions/new.html.erb
@@ -1,1 +1,14 @@
-<h1>Form to create a queue position</h1>
+
+<link rel="stylesheet" href="_new.scss">
+
+
+<img src="Join.svg">
+<div class="h1-header">
+<h1>Welcome!</h1>
+</div>
+<h2>Secure your spot in the queue here, and avoid the hassle of standing in line.</h2>
+<input type="text" name="mobile" placeholder="your mobile number">
+<button>Secure my spot!</button>
+
+
+
