--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,24 @@
 // Specific CSS for your home-page
+body {
+  background-color: #F8F8FD;
+}
+
+h1 h2 p a {
+  color: #2F2E41;
+  font-family: 'Quicksand', sans-serif;
+}
+
+h1 {
+  font-size: 32px;
+  font-weight: bold;
+}
+
+h2 {
+  font-size: 24px;
+  font-weight: light;
+}
+
+p {
+  font-size: 18px;
+}
+
