--- a/app/views/queue_positions/show.html.erb
+++ b/app/views/queue_positions/show.html.erb
@@ -1,1 +1,14 @@
-<h1>Queue Position show page</h1>
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="_home.scss">
+<link rel="stylesheet" href="_status.scss">
+
+<div class="page-header">
+  <h1>Awesome!</h1>
+</div>
+<div class="page-subheader">
+  <h2>You are number...</h2>
+</div>
+<div class="status-card">
+  <div class="card-number">14</div>
+</div>
