--- a/app/assets/stylesheets/pages/_new.scss
+++ b/app/assets/stylesheets/pages/_new.scss
@@ -1,97 +1,97 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 
-  body {
-    background: #F8F8FD;
-  }
 
-  img {
-    position: absolute;
-    width: 362px;
-    height: 265px;
-    left: 6px;
-    top: 58px;
-  }
+//   body {
+//     background: #F8F8FD;
+//   }
 
-  h1 {
-    position: absolute;
-    width: 320px;
-    height: 80px;
-    left: 27px;
-    top: 342px;
+//   img {
+//     position: absolute;
+//     width: 362px;
+//     height: 265px;
+//     left: 6px;
+//     top: 58px;
+//   }
 
-    font-family: Quicksand;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 32px;
-    line-height: 40px;
-    display: flex;
-    align-items: center;
-    text-align: center;
+//   h1 {
+//     position: absolute;
+//     width: 320px;
+//     height: 80px;
+//     left: 27px;
+//     top: 342px;
 
-    color: #2F2E41;
-  }
+//     font-family: Quicksand;
+//     font-style: normal;
+//     font-weight: bold;
+//     font-size: 32px;
+//     line-height: 40px;
+//     display: flex;
+//     align-items: center;
+//     text-align: center;
 
-  h2 {
-    position: absolute;
-    width: 267px;
-    height: 131px;
-    left: 51px;
-    top: 422px;
+//     color: #2F2E41;
+//   }
 
-    font-family: Quicksand;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 24px;
-    line-height: 30px;
-    display: flex;
-    align-items: center;
-    text-align: center;
+//   h2 {
+//     position: absolute;
+//     width: 267px;
+//     height: 131px;
+//     left: 51px;
+//     top: 422px;
 
-    color: #2F2E41;
-  }
+//     font-family: Quicksand;
+//     font-style: normal;
+//     font-weight: normal;
+//     font-size: 24px;
+//     line-height: 30px;
+//     display: flex;
+//     align-items: center;
+//     text-align: center;
 
-  input {
-    position: absolute;
-    width: 290px;
-    height: 55px;
-    left: 46px;
-    top: 594px;
-    background: #FFFFFF;
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
-    border-radius: 50px;
-    font-family: Quicksand;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 18px;
-    line-height: 22px;
-    display: flex;
-    align-items: center;
+//     color: #2F2E41;
+//   }
 
-    color: #C9C9C9;
-      }
+//   input {
+//     position: absolute;
+//     width: 290px;
+//     height: 55px;
+//     left: 46px;
+//     top: 594px;
+//     background: #FFFFFF;
+//     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+//     border-radius: 50px;
+//     font-family: Quicksand;
+//     font-style: normal;
+//     font-weight: bold;
+//     font-size: 18px;
+//     line-height: 22px;
+//     display: flex;
+//     align-items: center;
 
-  button {
-    position: absolute;
-    width: 290px;
-    height: 55px;
-    left: 47px;
-    top: 668px;
+//     color: #C9C9C9;
+//       }
 
-    font-family: Quicksand;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 24px;
-    line-height: 30px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    border-color: #7C2DF8;
+//   button {
+//     position: absolute;
+//     width: 290px;
+//     height: 55px;
+//     left: 47px;
+//     top: 668px;
 
-    color: #FFFFFF;
-    background: #7C2DF8;
-    border-radius: 50px;
-  }
+//     font-family: Quicksand;
+//     font-style: normal;
+//     font-weight: bold;
+//     font-size: 24px;
+//     line-height: 30px;
+//     display: flex;
+//     align-items: center;
+//     text-align: center;
+//     border-color: #7C2DF8;
 
-  .h1-header {
-    text-align: center;
-  }
+//     color: #FFFFFF;
+//     background: #7C2DF8;
+//     border-radius: 50px;
+//   }
+
+//   .h1-header {
+//     text-align: center;
+//   }
