--- a/app/assets/stylesheets/pages/_status.scss
+++ b/app/assets/stylesheets/pages/_status.scss
@@ -1,14 +1,15 @@
 .page-header {
   text-align: center;
   margin: 0 auto;
-  padding-top: 100px;
+  padding-top: 110px;
   padding-bottom: 10px;
 }
 
 .page-subheader {
   text-align: center;
   margin: 0 auto;
-  padding: 10px;
+  padding-top: 20px;
+  padding-bottom: 50px;
 }
 
 .card-number {
@@ -24,4 +25,23 @@
   border-radius: 50px;
   width: 235px;
   margin: 0 auto;
+}
+
+.status-buttons {
+  padding-top: 80px;
+  text-align: center;
+}
+
+.btn-ghost {
+  color: #4A4A4A;
+  border: 1px solid #4A4A4A;
+  padding: 8px 24px;
+  border-radius: 50px;
+  font-weight: lighter;
+  opacity: 0.6;
+  transition: opacity 0.3s ease;
+}
+
+.btn-ghost:hover {
+  opacity: 1;
 }
