--- a/app/assets/stylesheets/pages/_new.scss
+++ b/app/assets/stylesheets/pages/_new.scss
@@ -18,8 +18,7 @@
     height: 80px;
     left: 27px;
     top: 342px;
-
-    font-family: Quicksand;
+    font-family: 'Quicksand', sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 32px;
@@ -27,7 +26,6 @@
     display: flex;
     align-items: center;
     text-align: center;
-
     color: #2F2E41;
   }
 
@@ -38,7 +36,7 @@
     left: 51px;
     top: 422px;
 
-    font-family: Quicksand;
+    font-family: 'Quicksand', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
@@ -50,7 +48,15 @@
     color: #2F2E41;
   }
 
-  input {
+  svg {
+    position: absolute;
+    width: 362px;
+    height: 265px;
+    left: 6px;
+    top: 58px;
+  }
+
+  .mobile-input {
     position: absolute;
     width: 290px;
     height: 55px;
@@ -59,7 +65,7 @@
     background: #FFFFFF;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
     border-radius: 50px;
-    font-family: Quicksand;
+    font-family: 'Quicksand', sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 18px;
@@ -70,14 +76,14 @@
     color: #C9C9C9;
       }
 
-  button {
+  .button {
     position: absolute;
     width: 290px;
     height: 55px;
     left: 47px;
     top: 668px;
 
-    font-family: Quicksand;
+    font-family: 'Quicksand', sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 24px;
