status page updated with buttons

--- a/app/views/queue_positions/show.html.erb
+++ b/app/views/queue_positions/show.html.erb
@@ -13,9 +13,9 @@
 
 
 <div class="status-buttons">
-  <%= link_to "<", "#", class: "btn btn-ghost" %>
+  <%= link_to "<", "#", class: "btn btn-leave" %>
 
-  <%= link_to ">", "#", class: "btn btn-ghost" %>
+  <%= link_to ">", "#", class: "btn btn-alert" %>
 </div>
 
 <%# !!! the if statment should be here !!! %>
