--- a/app/assets/stylesheets/pages/_status.scss
+++ b/app/assets/stylesheets/pages/_status.scss
@@ -32,16 +32,44 @@
   text-align: center;
 }
 
-.btn-ghost {
-  color: #4A4A4A;
-  border: 1px solid #4A4A4A;
-  padding: 8px 24px;
+.btn-leave {
+  color: #2F2E41;
+  background-color: white;
+  font-size: 40px;
+  font-family: 'Quicksand', sans-serif;
+  font-weight: bold;
+  text-align: center;
+  line-height: 40px;
+  padding: 8px 8px;
   border-radius: 50px;
   font-weight: lighter;
   opacity: 0.6;
   transition: opacity 0.3s ease;
+  height: 70px;
+  width: 70px;
 }
 
-.btn-ghost:hover {
+.btn-leave:hover {
+  opacity: 1;
+}
+
+.btn-alert {
+  color: #2F2E41;
+  background-color: white;
+  font-size: 40px;
+  font-family: 'Quicksand', sans-serif;
+  font-weight: bold;
+  text-align: center;
+  line-height: 40px;
+  padding: 8px 8px;
+  border-radius: 50px;
+  font-weight: lighter;
+  opacity: 0.6;
+  transition: opacity 0.3s ease;
+  height: 70px;
+  width: 70px;
+}
+
+.btn-alert:hover {
   opacity: 1;
 }
