update the enter page

--- a/app/views/queue_positions/_enter.html.erb
+++ b/app/views/queue_positions/_enter.html.erb
@@ -1,11 +1,13 @@
-<div class="container">
-  <div class="row col-12">
+<div class="container position-absolute top-50 start-50 translate-middle">
+<div class="row">
+  <div class="col-12">
     <h1>Conguralations!</h1>
   </div>
-  <div class="row col-12">
+  <div class="col-12">
     <%= image_tag "Congrats.svg", width: 350 %>
   </div>
-  <div class="row col-12">
+  <div class="col-12">
     <h1>It is your turn to enter!</h1>
   </div>
+</div>
 </div>
