style the enter page

--- a/app/views/queue_positions/_enter.html.erb
+++ b/app/views/queue_positions/_enter.html.erb
@@ -1,13 +1,13 @@
 <div class="container position-absolute top-50 start-50 translate-middle">
 <div class="row">
-  <div class="col-12">
+  <div class="col-12 mx-auto text-center">
     <h1>Conguralations!</h1>
   </div>
-  <div class="col-12">
-    <%= image_tag "Congrats.svg", width: 350 %>
+  <div class="col-12 mx-auto text-center my-5">
+    <%= image_tag "Congrats.svg", width: 300 %>
   </div>
-  <div class="col-12">
-    <h1>It is your turn to enter!</h1>
+  <div class="col-12 mx-auto text-center">
+    <h1 class="fw-light">It is your turn to enter!</h1>
   </div>
 </div>
 </div>
