updated buttons design

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -17,10 +17,11 @@ h1 {
 
 h2 {
   font-size: 24px;
-  font-weight: light;
+  font-weight: lighter;
 }
 
 p {
   font-size: 18px;
+  font-weight: lighter;
 }
 
