--- a/app/assets/stylesheets/pages/_status.scss
+++ b/app/assets/stylesheets/pages/_status.scss
@@ -28,8 +28,10 @@
 }
 
 .status-buttons {
-  padding-top: 80px;
+  padding-top: 60px;
   text-align: center;
+  display: flex;
+  justify-content: space-evenly;
 }
 
 .btn-leave {
@@ -40,36 +42,41 @@
   font-weight: bold;
   text-align: center;
   line-height: 40px;
-  padding: 8px 8px;
   border-radius: 50px;
-  font-weight: lighter;
-  opacity: 0.6;
-  transition: opacity 0.3s ease;
   height: 70px;
   width: 70px;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
 }
 
-.btn-leave:hover {
-  opacity: 1;
+// .btn-leave:hover {
+//   opacity: 1;
+// }
+
+.btn-left {
+  margin-left: 50px;
 }
 
 .btn-alert {
-  color: #2F2E41;
-  background-color: white;
+  color: white;
+  background-color: #7C2DF8;
   font-size: 40px;
   font-family: 'Quicksand', sans-serif;
   font-weight: bold;
   text-align: center;
   line-height: 40px;
-  padding: 8px 8px;
   border-radius: 50px;
-  font-weight: lighter;
-  opacity: 0.6;
-  transition: opacity 0.3s ease;
   height: 70px;
   width: 70px;
 }
 
-.btn-alert:hover {
-  opacity: 1;
+// .btn-alert:hover {
+//   opacity: 1;
+// }
+
+.btn-right {
+  margin-right: 50px;
+}
+
+.btn-text {
+  padding-top:10px
 }
