update the soon page

--- a/app/views/queue_positions/_soon.html.erb
+++ b/app/views/queue_positions/_soon.html.erb
@@ -1,9 +1,13 @@
-<div>
-  <h1>Ready?<h1>
+<div class="container position-absolute top-50 start-50 translate-middle">
+<div class="row">
+  <div class="col-12 mx-auto text-center">
+    <h1>Ready!</h1>
+  </div>
+  <div class="col-12 mx-auto text-center my-5">
+    <%= image_tag "Taken.svg", width: 300 %>
+  </div>
+  <div class="col-12 mx-auto text-center">
+    <h1 class="fw-light">It's almost your turn so get closer...!</h1>
+  </div>
 </div>
-<div>
-  <%= image_tag("Taken.svg") %>
-</div>
-<div>
-  <h2>It's almost your turn so get closer...</h2>
 </div>
