--- a/app/views/queue_positions/show.html.erb
+++ b/app/views/queue_positions/show.html.erb
@@ -1,26 +1,7 @@
-<div class="page-header">
-  <h1>Awesome!</h1>
-</div>
-<div class="page-subheader">
-  <h2>You are number...</h2>
-</div>
-<div class="status-card">
-  <div class="card-number">
-    <%= @queue_position.position %>
-  </div>
-</div>
-
-
-<div class="status-buttons">
-  <div class="btn-left">
-    <%= link_to "<", "#", class: "btn btn-leave" %>
-    <p class="btn-text">Leave</p>
-  </div>
-  <div class="btn-right">
-    <%= link_to ">", "#", class: "btn btn-alert" %>
-    <p class="btn-text">Alert me!</p>
-  </div>
-</div>
-
-<%# !!! the if statment should be here !!! %>
-
+<% if @queue_position.position == 1 %>
+  <%= render "enter" %>
+<% elsif  @queue_position.position < 4 %>
+  <%= render "soon" %>
+<% else %>
+  <%= render "queue" %>
+<% end %>
