fix the enter page

--- a/app/views/queue_positions/_enter.html.erb
+++ b/app/views/queue_positions/_enter.html.erb
@@ -1,7 +1,7 @@
 <div class="container position-absolute top-50 start-50 translate-middle">
 <div class="row">
   <div class="col-12 mx-auto text-center">
-    <h1>Conguralations!</h1>
+    <h1>Congratulations!</h1>
   </div>
   <div class="col-12 mx-auto text-center my-5">
     <%= image_tag "Congrats.svg", width: 300 %>
