--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,2 +1,14 @@
-<h1>All customers in the queue</h1>
-
+<div class="container position-absolute top-50 start-50 translate-middle">
+<div class="row">
+  <div class="col-12 mx-auto text-center">
+    <h1>All customers in the queue!</h1>
+  </div>
+  <div class="col-12 col-sm-6 mx-auto text-center my-5">
+    <ul class="list-group">
+      <% @queue_positions.each do |queue_position| %>
+        <li class="list-group-item list-group-item-info"><%= queue_position.position %></li>
+      <% end %>
+    </ul>
+  </div>
+</div>
+</div>
