--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -6,7 +6,7 @@
   <div class="col-12 col-sm-6 mx-auto text-center my-5">
     <ul class="list-group">
       <% @queue_positions.each do |queue_position| %>
-        <li class="list-group-item list-group-item-info"><%= queue_position.position %></li>
+        <li class="list-group-item list-group-item-action list-group-item-info"><%= queue_position.position %></li>
       <% end %>
     </ul>
   </div>
