--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,20 @@
 <%= render 'shared/navbar' %>
 <%= render 'shared/flashes' %>
+
+<div class="container">
+  <h1>NoQ</h1>
+  <p>Queueing is boring. We make it simple for you</p>
+</div>
+
+<div class="container">
+  <h2>Browse the stores we work with</h2>
+  <div class="cards-stores">
+    <% @stores.each do |store| %>
+      <%= link_to store_path(store) do %>
+        <div class="card">
+          <h3><%= store.store_name %></h3>
+        </div>
+      <% end %>
+    <% end %>
+  </div>
+</div>
