--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -9,7 +9,7 @@
       <div class="col-12 col-md-6 col-lg-3">
         <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://images.unsplash.com/photo-1472851294608-062f824d29cc?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MXx8c3RvcmV8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&w=1000&q=80')">
           <div class="card-description">
-            <h2><%= store.name %></h2>
+            <h2><%= store.store_name %></h2>
           </div>
           <%= link_to "", store_path(store), class: 'card-link' %>
         </div>
