--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -1,22 +1,21 @@
-
-<div class="container position-absolute top-50 start-50 translate-middle">
-<div class="row">
-  <div class="col-12mx-auto text-center my-5">
-    <%= image_tag "Join.svg", width: 300 %>
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-12 mx-auto text-center my-5">
+      <%= image_tag "Join.svg", width: 300 %>
+    </div>
+    <div class="col-12 mx-auto text-center">
+      <h1>Welcome to <%= @store.store_name %>!</h1>
+    </div>
+    <div class="col-12 mx-auto text-center">
+      <p class="fw-light">Secure your spot in the queue here, and avoid the hassle of standing in the line.</p>
+    </div>
+    <div class="col-12 col-sm-4 mx-auto text-center">
+      <%= simple_form_for [ @store, @customer ] do |f| %>
+        <div class= "mobile-input">
+          <%= f.input :mobile_number, class: "mobile-input" %>
+        </div>
+        <%= f.submit "Secure my spot!", class: "btn btn-primary" %>
+      <% end %>
+    </div>
   </div>
-  <div class="col-12 mx-auto text-center">
-    <h1>Welcome!</h1>
-  </div>
-  <div class="col-12 mx-auto text-center">
-    <h1 class="fw-light">Secure your spot in the queue here, and avoid the hassle of standing in the line.</h1>
-  </div>
-  <div class="col-12 col-sm-4 mx-auto text-center">
-    <%= simple_form_for [ @store, @customer ] do |f| %>
-      <div class= "mobile-input">
-        <%= f.input :mobile_number, class: "mobile-input" %>
-      </div>
-      <%= f.submit "Secure my spot!", class: "button" %>
-    <% end %>
-  </div>
-</div>
 </div>
