cleaned show customers

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,4 +2,6 @@
 @import "alert";
 @import "avatar";
 @import "cards_stores";
+@import "cards_customers";
 @import "navbar";
+@import "queue_position_soon";
