--- a/app/assets/stylesheets/pages/_status.scss
+++ b/app/assets/stylesheets/pages/_status.scss
@@ -69,6 +69,19 @@
   width: 70px;
 }
 
+.btn-main {
+  color: white;
+  background-color: #7C2DF8;
+  font-size: 24px;
+  font-family: 'Quicksand', sans-serif;
+  font-weight: bold;
+  text-align: center;
+  line-height: 40px;
+  border-radius: 50px;
+  height: 55px;
+  width: 290px;
+}
+
 // .btn-alert:hover {
 //   opacity: 1;
 // }
