--- a/app/views/queue_positions/_queue.html.erb
+++ b/app/views/queue_positions/_queue.html.erb
@@ -11,8 +11,9 @@
 </div>
 
 <div class="status-buttons">
-  <div class="btn-left">
-    <%= link_to "<", "#", class: "btn btn-leave" %>
+  <div class="btn-left" id="alert-leaving">
+    <button class= "btn btn-leave"><</button>
+    <%= link_to "", "#", id: "leave-link", class: "hidden" %>
     <p class="btn-text">Leave</p>
   </div>
   <div class="btn-right">
