--- a/app/views/queue_positions/_queue.html.erb
+++ b/app/views/queue_positions/_queue.html.erb
@@ -5,7 +5,7 @@
   <h2>You are number...</h2>
 </div>
 <div class="status-card">
-  <div class="card-number">
+  <div class="card-number" id="counter">
     <%= @queue_position.position %>
   </div>
 </div>
