done queue-leave page

--- a/app/views/queue_positions/_queue.html.erb
+++ b/app/views/queue_positions/_queue.html.erb
@@ -13,7 +13,7 @@
 <div class="status-buttons">
   <div class="btn-left" id="alert-leaving">
     <button class= "btn btn-leave"><</button>
-    <%= link_to "", "#", id: "leave-link", class: "hidden" %>
+    <%= link_to "", "/leave", id: "leave-link", class: "hidden" %>
     <p class="btn-text">Leave</p>
   </div>
   <div class="btn-right">
