--- a/app/views/queue_positions/_soon.html.erb
+++ b/app/views/queue_positions/_soon.html.erb
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="col-12 mx-auto text-center">
     <h1>Ready!</h1>
-    <p class="position-number id="counter"">There are only <%= @queue_position.position - 1 %> ahead of you</p>
+    <p class="position-number" id="counter">There are only <%= @queue_position.position - 1 %> ahead of you</p>
   </div>
   <div class="col-12 mx-auto text-center my-5">
     <%= image_tag "Taken.svg", width: 300 %>
