--- a/app/assets/stylesheets/components/_cards_stores.scss
+++ b/app/assets/stylesheets/components/_cards_stores.scss
@@ -11,3 +11,76 @@
     padding: 16px;
   }
 }
+
+.container {
+  padding-left: 30px;
+}
+
+.browse-header {
+  display: flex;
+  justify-content: space-between;
+  line-height: 0px;
+  padding-bottom: 10px;
+  // vertical-align: middle;
+}
+
+.fa-arrow-right {
+  font-size: 24px;
+  color: #7C2DF8;
+  // float: right;
+  margin-top: 12px;
+  margin-right: 10px;
+}
+
+.card {
+  overflow: hidden;
+  background: white;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+  border-radius: 15px;
+  width: 200px;
+  height: 240px;
+}
+
+.card > img {
+  width: 200px;
+  height: 100%;
+  object-fit: contain;
+  padding: 18px 18px 18px 18px;
+}
+
+.card h2 {
+  font-size: 18px;
+  font-weight: bold;
+  margin: 0;
+  font-family: 'Quicksand', sans-serif;
+}
+
+.card p {
+  font-size: 16px;
+  opacity: .3;
+  margin: 0;
+  font-family: 'Quicksand', sans-serif;
+  font-weight: light;
+}
+
+.card .card-info {
+  padding: 16px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  position: relative;
+}
+
+.QR-code {
+  width: 60px;
+  height: 60px;
+  border-radius: 15px;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+  border: white 5px solid;
+}
+
+.card-info .card-store {
+  position: absolute;
+  right: 12px;
+  top: -40px;
+}
