--- a/app/assets/stylesheets/components/_cards_stores.scss
+++ b/app/assets/stylesheets/components/_cards_stores.scss
@@ -12,6 +12,17 @@
   }
 }
 
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  width: 100%;
+  height: 100%;
+}
+
 .container {
   padding-left: 30px;
 }
@@ -83,4 +94,31 @@
   position: absolute;
   right: 12px;
   top: -40px;
+}
+
+.swiper-container {
+  width: 100%;
+  height: 250px;
+  margin: 15px 0 10px;
+}
+
+.swiper-slide {
+  text-align: center;
+  margin-right: 10px !important;
+  width: 210px !important;
+
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+  overflow: hidden;
 }
