new design done

--- a/app/assets/stylesheets/pages/_status.scss
+++ b/app/assets/stylesheets/pages/_status.scss
@@ -82,6 +82,18 @@
   width: 290px;
 }
 
+.btn-queue {
+  color: white;
+  background-color: #B33A3A;
+  font-size: 24px;
+  font-family: 'Quicksand', sans-serif;
+  font-weight: bold;
+  text-align: center;
+  line-height: 40px;
+  border-radius: 50px;
+  height: 55px;
+  width: 140px;
+}
 // .btn-alert:hover {
 //   opacity: 1;
 // }
