--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,3 +1,6 @@
+<%= render 'shared/navbar' %>
+<%= render 'shared/flashes' %>
+
 <div class="container mt-5">
   <div class="row">
     <div class="col-12 mx-auto text-center">
