--- a/app/views/queue_positions/_queue.html.erb
+++ b/app/views/queue_positions/_queue.html.erb
@@ -11,7 +11,10 @@
 </div>
 
 <div class="status-buttons">
-  <div class="btn-queue" id="alert-leaving">
-    <%= link_to "Leave", "/leave", id: "leave-link", class: "btn btn-queue" %>
+  <div class="btn-queue">
+    <%= link_to "Leave", queue_position_path(@queue_position), class: "btn btn-queue", method: :delete, data: { confirm: "Are you sure you want to leave the queue?" } %>
   </div>
 </div>
+
+
+
