--- a/app/assets/stylesheets/components/_cards_stores.scss
+++ b/app/assets/stylesheets/components/_cards_stores.scss
@@ -24,7 +24,7 @@ body {
 }
 
 @media (max-width: 375px) {
-  .container {
+  .container-1 {
     padding-left: 30px;
   }
 
@@ -105,7 +105,7 @@ body {
 
   .swiper-slide {
     text-align: center;
-    margin-right: 10px !important;
+    margin-right: 0px !important;
     width: 210px !important;
 
     /* Center slide text vertically */
@@ -123,5 +123,7 @@ body {
     align-items: center;
     overflow: hidden;
   }
+
+
 }
 
