--- a/app/assets/stylesheets/components/_cards_stores.scss
+++ b/app/assets/stylesheets/components/_cards_stores.scss
@@ -1,17 +1,3 @@
-// .cards-stores {
-//   display: grid;
-//   grid-template-columns: 1fr 1fr 1fr;
-//   padding: 32px;
-// }
-
-// @media (max-width: 576px) {
-//   .cards-stores {
-//     display: grid;
-//     grid-template-columns: 1fr;
-//     padding: 16px;
-//   }
-// }
-
 *{
   margin: 0;
   padding: 0;
@@ -55,7 +41,7 @@ body {
 
   .card > img {
     width: 200px;
-    height: 100%;
+    height: 185px;
     object-fit: contain;
     padding: 18px 18px 18px 18px;
   }
@@ -124,6 +110,12 @@ body {
     overflow: hidden;
   }
 
+  .fake-card {
+    overflow: hidden;
+    border-radius: 15px;
+    width: 100%;
+    height: 240px;
+  }
 
 }
 
