fix the bug in the home page style

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <%# Slider design CSS  %>
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+    <%# <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" /> %>
     <%# <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" /> %>
 
     <%# Bootstrap 5 CSS  %>
