--- a/app/assets/stylesheets/components/_cards_customers.scss
+++ b/app/assets/stylesheets/components/_cards_customers.scss
@@ -11,3 +11,101 @@
     padding: 16px;
   }
 }
+
+// //
+
+// .container-1 {
+//   padding-left: 30px;
+// }
+// /* line 17, app/assets/stylesheets/components/_cards_stores.scss */
+// .browse-header {
+//   display: flex;
+//   justify-content: space-between;
+//   line-height: 0px;
+//   padding-bottom: 0px;
+// }
+// /* line 25, app/assets/stylesheets/components/_cards_stores.scss */
+// .fa-arrow-right {
+//   font-size: 24px;
+//   color: #7C2DF8;
+//   margin-top: 12px;
+//   margin-right: 10px;
+// }
+// /* line 33, app/assets/stylesheets/components/_cards_stores.scss */
+// .card {
+//   overflow: hidden;
+//   background: white;
+//   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+//   border-radius: 15px;
+//   width: 200px;
+//   height: 240px;
+// }
+// /* line 42, app/assets/stylesheets/components/_cards_stores.scss */
+// .card > img {
+//   width: 200px;
+//   height: 185px;
+//   -o-object-fit: contain;
+//      object-fit: contain;
+//   padding: 18px 18px 18px 18px;
+// }
+// /* line 49, app/assets/stylesheets/components/_cards_stores.scss */
+// .card h2 {
+//   font-size: 18px;
+//   font-weight: bold;
+//   margin: 0;
+//   font-family: 'Quicksand', sans-serif;
+// }
+// /* line 56, app/assets/stylesheets/components/_cards_stores.scss */
+// .card p {
+//   font-size: 16px;
+//   opacity: .3;
+//   margin: 0;
+//   font-family: 'Quicksand', sans-serif;
+//   font-weight: light;
+// }
+// /* line 64, app/assets/stylesheets/components/_cards_stores.scss */
+// .card .card-info {
+//   padding: 16px;
+//   display: flex;
+//   justify-content: space-between;
+//   align-items: flex-end;
+//   position: relative;
+// }
+// /* line 72, app/assets/stylesheets/components/_cards_stores.scss */
+// .QR-code {
+//   width: 60px;
+//   height: 60px;
+//   border-radius: 15px;
+//   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+//   border: white 5px solid;
+// }
+// /* line 80, app/assets/stylesheets/components/_cards_stores.scss */
+// .card-info .card-store {
+//   position: absolute;
+//   right: 12px;
+//   top: -60px;
+// }
+// /* line 86, app/assets/stylesheets/components/_cards_stores.scss */
+// .swiper-container {
+//   width: 100%;
+//   height: 250px;
+//   margin: 15px 0 10px;
+// }
+// /* line 92, app/assets/stylesheets/components/_cards_stores.scss */
+// .swiper-slide {
+//   text-align: center;
+//   margin-right: 0px !important;
+//   width: 210px !important;
+//   /* Center slide text vertically */
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   overflow: hidden;
+// }
+// /* line 113, app/assets/stylesheets/components/_cards_stores.scss */
+// .fake-card {
+//   overflow: hidden;
+//   border-radius: 15px;
+//   width: 100%;
+//   height: 240px;
+// }
