style done for enter and soon page

--- a/app/views/queue_positions/_enter.html.erb
+++ b/app/views/queue_positions/_enter.html.erb
@@ -9,5 +9,10 @@
   <div class="col-12 mx-auto text-center">
     <h1 class="fw-light">It is your turn to enter!</h1>
   </div>
+  <div class="status-buttons">
+  <div class="btn-main">
+  <%= link_to "Back to homepage", "/", class: "btn btn-main" %>
+  </div>
+  </div>
 </div>
 </div>
