--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,8 @@
 
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
     <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
+
+    <%= favicon_link_tag %>
   </head>
 
   <body>
