--- a/app/views/queue_positions/_enter.html.erb
+++ b/app/views/queue_positions/_enter.html.erb
@@ -1,3 +1,5 @@
+<% content_for :meta_title, "Congratulations!" %>
+
 <div class="container position-absolute top-50 start-50 translate-middle">
 <div class="row">
   <div class="col-12 mx-auto text-center">
