--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,15 +15,19 @@
           <%= link_to "Home", root_path, class: "nav-link" %>
         </li>
         <li class="nav-item active">
-          <%= link_to "Queues", "stores/1/customers", class: "nav-link" %>
+          <%= link_to "Queues", store_customers_path(@store), class: "nav-link" %>
         </li>
-        <li class="nav-item dropdown">
-          <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+        <li class="nav-item active">
+          <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "nav-link" %>
+        </li>
+        <!--<%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <li class="nav-item dropdown">
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <!-- <%= link_to "Queues", "stores/1/customers", class: "dropdown-item" %> -->
+            <%= link_to "Home", root_path, class: "dropdown-item" %>
+            <%= link_to "Queues", "stores/1/customers", class: "dropdown-item" %>
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
-        </li>
+        </li>-->
       <% else %>
         <li class="nav-item">
           <%= link_to "Login", new_user_session_path, class: "nav-link" %>
