--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -4,7 +4,7 @@
 <div class="container mt-3">
   <div class="row">
     <div class="col-12 mx-auto text-center">
-      <p class="fs-4">Hello <%= @store.store_name %>! <br> You currently have <br> <span class="text-primary fs-1 fw-bolder"><%= @store.queue_positions.count %></span> <br> customers in the queue.</p>
+      <p class="fs-4">Hello <%= @store.store_name %>! <br> You have <span class="text-primary fs-1 fw-bolder"><%= @store.queue_positions.count %></span> customers <br> in the queue.</p>
     </div>
 
     <div class="col-12 mx-auto text-center mb-3">
@@ -16,7 +16,7 @@
         <% @queue_positions.each do |queue_position| %>
           <li class="list-group-item list-group-item-action list-group-item-primary mb-1">
           <i class="fas fa-mobile-alt"></i> <%= queue_position.customer.mobile_number %> -- Position: <%= queue_position.position %> --
-          <%= link_to "Mark Entered!", queue_position_path(queue_position), class: "btn btn-danger btn-sm rounded-3", method: :delete, data: { confirm: "Are you sure you want to delete queue position #{queue_position.position}?" } %>
+          <%= link_to "Entered!", remove_path(queue_position), class: "btn btn-danger btn-sm rounded-3", method: :delete, data: { confirm: "Are you sure you want to delete queue position #{queue_position.position}?" } %>
           </li>
         <% end %>
       </ul>
