--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -15,7 +15,7 @@
       <ul class="list-group">
         <% @queue_positions.each do |queue_position| %>
           <li class="list-group-item list-group-item-action list-group-item-primary mb-1">
-          <i class="fas fa-mobile-alt"></i> <%= queue_position.customer.mobile_number %> -- Position: <%= queue_position.position %> --
+          <i class="fas fa-mobile-alt"> ...</i> <%= queue_position.customer.mobile_number.delete(" ").split(//).last(3).join %> -- Position: <%= queue_position.position %> --
           <%= link_to "Entered!", remove_path(queue_position), class: "btn btn-danger btn-sm rounded-3", method: :delete, data: { confirm: "Are you sure you want to delete queue position #{queue_position.position}?" } %>
           </li>
         <% end %>
