updated style of the page per figma design

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -13,15 +13,18 @@ h1 h2 p a {
 h1 {
   font-size: 32px;
   font-weight: bold;
+  color: #2F2E41;
 }
 
 h2 {
   font-size: 24px;
   font-weight: lighter;
+  color: #2F2E41;
 }
 
 p {
   font-size: 18px;
   font-weight: lighter;
+  color: #2F2E41;
 }
 
