--- a/app/assets/stylesheets/components/_cards_customers.scss
+++ b/app/assets/stylesheets/components/_cards_customers.scss
@@ -1,13 +1,51 @@
 .cards-customers {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  padding: 32px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: white;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+  border-radius: 15px;
+  width: 290px;
+  height: 60px;
 }
 
-@media (max-width: 576px) {
-  .cards-customers {
-    display: grid;
-    grid-template-columns: 1fr;
-    padding: 16px;
-  }
+h4 {
+  color: #2F2E41;
+  font-family: 'Quicksand', sans-serif;
+  font-size: 18px;
+  font-weight: lighter;
+  margin-top: 0.5rem;
+  margin-right: 12px;
+  margin-left: -15px;
+}
+
+.fa-mobile-alt {
+  color: #2F2E41;
+  font-size: 32px;
+  padding-left: 20px;
+}
+
+.fa-map-marker-alt {
+  color: #2F2E41;
+  font-size: 32px;
+}
+
+.let-in-btn {
+  border-radius: 15px;
+  width: 105px;
+  height: 60px;
+  background: #7C2DF8;
+  font-size: 18px;
+  font-family: 'Quicksand', sans-serif;
+  color: white;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.fa-sign-in-alt {
+  color: white;
+  font-size: 32px;
+  padding-left: 8px;
 }
