--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -4,36 +4,28 @@
 <div class="container mt-3">
   <div class="row">
     <div class="col-12 mx-auto text-center">
-      <p class="fs-4">Hello <%= @store.store_name %>! <br> You have <span class="text-primary fs-1 fw-bolder"><%= @store.queue_positions.count %></span> customers <br> in the queue.</p>
+      <h1>Hello <%= @store.store_name %>!</h1>
+      <h2> You have <span class="que-all"><%= @store.queue_positions.count %></span> customers <br> in the queue.</h2>
     </div>
 
-    <div class="col-12 mx-auto text-center mb-3">
-      <%= image_tag "undraw_Traveling_re_weve.svg", width: 300, height: 200 %>
+    <div class="col-12 mx-auto text-center my-3">
+      <%= image_tag "undraw_Traveling_re_weve.svg", height: 240 %>
     </div>
 
-    <div class="col-12 col-sm-8 mx-auto text-center">
+    <div class="col-12 col-sm-8 mx-auto text-center mt-4">
       <ul class="list-group">
         <% @queue_positions.each do |queue_position| %>
-          <li class="list-group-item list-group-item-action list-group-item-primary mb-1">
-          <i class="fas fa-mobile-alt"> ...</i> <%= queue_position.customer.mobile_number.delete(" ").split(//).last(3).join %> -- Position: <%= queue_position.position %> --
-          <%= link_to "Entered!", remove_path(queue_position), class: "btn btn-danger btn-sm rounded-3", method: :delete, data: { confirm: "Are you sure you want to delete queue position #{queue_position.position}?" } %>
-          </li>
-        <% end %>
-      </ul>
-<%
-=begin %>
-      <div class="cards-customers">
-        <% @queue_positions.each do |queue_position| %>
-          <div class="card">
-            <p><i class="fas fa-mobile-alt"></i> <%= queue_position.customer.mobile_number %></p>
-            <p>Position: <%= queue_position.position %></p>
-            <p>Entered: <%= queue_position.entered ? "Yes" : "No" %></p>
-            <%= link_to "Delete", remove_path(queue_position), method: :delete, data: { confirm: "Are you sure you want to delete queue position #{queue_position.position}?" } %>
+          <div class="container">
+            <div class="cards-customers">
+              <i class="fas fa-mobile-alt fa-2x"></i> <h4> **<%= queue_position.customer.mobile_number.delete(" ").split(//).last(3).join %> </h4>
+              <i class="fas fa-map-marker-alt fa-2x"></i> <h4> <%= queue_position.position %> </h4>
+              <div class="let-in-btn">
+                <i class="fas fa-sign-in-alt"></i> <%= link_to "Let in", remove_path(queue_position), class: "let-in-btn", method: :delete, data: { confirm: "Are you sure you want to delete queue position #{queue_position.position}?" } %>
+              </div>
+            </div>
           </div>
         <% end %>
-      </div>
-<%
-=end %>
+      </ul>
     </div>
   </div>
 </div>
