--- a/app/views/stores/new.html.erb
+++ b/app/views/stores/new.html.erb
@@ -5,19 +5,21 @@
     </div>
     <h1 class="partner-header">Become a <br> NoQ partner</h1>
 
-    <div class="col-12 text-center">
-      <%= simple_form_for(@store) do |f| %>
-        <div class= "partner-input">
-          <%= f.input :store_name, placeholder: 'Business name', class: 'partner-input' %>
-        </div>
-        <div class= "partner-input">
-          <%= f.input :store_capacity, placeholder: 'Capacity of your store:', class: 'partner-input' %>
-        </div>
-        <div class= "partner-input">
-          <%= f.input :logo_url, placeholder: 'Link to your logo:', class: 'partner-input' %>
-        </div>
-        <%= f.submit 'Submit', class: 'submit-btn' %>
-      <% end %>
+    <div class="form-container">
+      <div class="col-12 text-center">
+        <%= simple_form_for(@store) do |f| %>
+          <div class="partner-input">
+            <%= f.input :store_name, placeholder: 'Business name', class: 'partner-input' %>
+          </div>
+          <div class="partner-input">
+            <%= f.input :store_capacity, placeholder: 'Capacity of your store:', class: 'partner-input' %>
+          </div>
+          <div class="partner-input">
+            <%= f.input :logo_url, placeholder: 'Link to your logo:', class: 'partner-input' %>
+          </div>
+          <%= f.submit 'Submit', class: 'submit-btn' %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
