--- a/app/assets/stylesheets/pages/_stores-new.scss
+++ b/app/assets/stylesheets/pages/_stores-new.scss
@@ -8,9 +8,9 @@
 }
 
 .partner-input {
-  // display: flex;
-  // justify-content: space-between;
-  // align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   background: white;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
   border-radius: 50px;
@@ -28,4 +28,11 @@
   border-radius: 50px;
   width: 290px;
   height: 60px;
+}
+
+.form-container {
+  display: flex;
+  padding-top: 10px;
+  padding-bottom: 20px;
+  justify-content: center;
 }
