--- a/app/assets/stylesheets/pages/_status.scss
+++ b/app/assets/stylesheets/pages/_status.scss
@@ -9,7 +9,16 @@
   text-align: center;
   margin: 0 auto;
   padding-top: 20px;
-  padding-bottom: 50px;
+  padding-bottom: 20px;
+}
+
+.page-refresh {
+  text-align: center;
+  margin: 0 auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  font-style: italic;
+  font-size: 3px;
 }
 
 .card-number {
