--- a/app/views/queue_positions/_queue.html.erb
+++ b/app/views/queue_positions/_queue.html.erb
@@ -1,15 +1,19 @@
 <% content_for :meta_title, "Position: #{@queue_position.position}" %>
 
-<div class="page-header">
-  <h1>Awesome!</h1>
+<div class="page-header mx-3">
+  <h1>Awesome <br> you are in the queue!</h1>
 </div>
 <div class="page-subheader">
-  <h2>You are number...</h2>
+  <h2>Your position:</h2>
 </div>
 <div class="status-card">
   <div class="card-number" id="counter">
     <%= @queue_position.position %>
   </div>
+</div>
+
+<div class="page-refresh">
+  <p>This will refresh automatically.</p>
 </div>
 
 <div class="status-buttons">
