--- a/app/views/stores/new.html.erb
+++ b/app/views/stores/new.html.erb
@@ -1,24 +1,19 @@
-<div class="container mt-3">
-  <div class="row">
-    <div class="col-12 mx-auto text-center my-4">
-      <%= image_tag "store_new_1.svg", width: 300, height: 200 %>
-    </div>
-    <h1 class="partner-header">Become a <br> NoQ partner</h1>
-
-    <div class="form-container">
-      <div class="col-12 text-center">
-        <%= simple_form_for(@store) do |f| %>
-          <div class="partner-input">
-            <%= f.input :store_name, placeholder: 'Business name', class: 'partner-input' %>
-          </div>
-          <div class="partner-input">
-            <%= f.input :store_capacity, placeholder: 'Capacity of your store:', class: 'partner-input' %>
-          </div>
-          <div class="partner-input">
-            <%= f.input :logo_url, placeholder: 'Link to your logo:', class: 'partner-input' %>
-          </div>
-          <%= f.submit 'Submit', class: 'submit-btn' %>
-        <% end %>
+<div class="body-wrapper">
+  <div class="container pt-3">
+    <div class="row">
+      <div class="create-image col-12 text-center">
+        <%= image_tag "store_new_1.svg", width: 300, height: 200; %>
+      </div>
+      <h1 class="partner-header">Become a <br> NoQ partner</h1>
+      <div class="form-container">
+        <div class="col-12 text-center">
+          <%= simple_form_for(@store) do |f| %>
+            <%= f.input :store_name, placeholder: 'Business name:', input_html: {class: 'partner-input'}, label: false %>
+            <%= f.input :store_capacity, placeholder: 'Capacity of your store:', input_html: {class: 'partner-input'}, label: false %>
+            <%= f.input :logo_url, as: :string, placeholder: 'Link to your logo:', input_html: {class: 'partner-input'}, label: false %>
+            <%= f.submit 'Submit', class: 'submit-btn' %>
+          <% end %>
+        </div>
       </div>
     </div>
   </div>
