home page button redirects to new_store_path

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -39,6 +39,6 @@
 
 <div class="partner-btn">
   <div class="btn-grey">
-    <%= link_to "Partner with us", "#", class: "btn-grey" %>
+    <%= link_to "Partner with us", new_store_path, class: "btn-grey" %>
   </div>
 </div>
