--- a/app/assets/stylesheets/components/_cards_customers.scss
+++ b/app/assets/stylesheets/components/_cards_customers.scss
@@ -1,3 +1,8 @@
+.body-wrapper {
+   background: #E8DFF8;
+   height: 100%;
+ }
+
 .cards-customers {
   display: flex;
   justify-content: space-between;
