updated h2 to light weight

--- a/app/assets/stylesheets/components/_cards_customers.scss
+++ b/app/assets/stylesheets/components/_cards_customers.scss
@@ -3,6 +3,15 @@
    height: 100%;
  }
 
+// .navbar-lewagon {
+//   background: #E8DFF8 !important;
+// }
+
+.index-headers {
+  font-weight: 300 !important;
+  font-family: 'Quicksand', sans-serif;
+}
+
 .cards-customers {
   display: flex;
   justify-content: space-between;
