--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -4,9 +4,9 @@
 <div class="body-wrapper">
   <div class="container pt-3">
     <div class="row">
-      <div class="col-12 mx-auto text-center">
+      <div class="col-12 mx-auto text-center pt-3">
         <h1>Hello <%= @store.store_name %>!</h1>
-        <h2> You have <span class="que-all"><%= @store.queue_positions.count %></span> customers <br> in the queue.</h2>
+        <h2 class="index-headers"> You have <span class="que-all"><%= @store.queue_positions.count %></span> customers <br> in the queue.</h2>
       </div>
 
       <div class="col-12 mx-auto text-center my-3">
