--- a/app/views/queue_positions/_queue.html.erb
+++ b/app/views/queue_positions/_queue.html.erb
@@ -11,14 +11,12 @@
     <%= @queue_position.position %>
   </div>
 </div>
-
 <%# Counter %>
-<div class="page-refresh mt-3">
+<div class="page-refresh mt-5">
   <p>This page will refresh in <span id="countdown">10</span> seconds.</p>
   <p>Enjoy your queue free time :)</p>
 </div>
-
-<div class="status-buttons">
+<div class="leave-buttons">
   <div class="btn-queue">
     <%= link_to "Leave", queue_position_path(@queue_position), class: "btn btn-queue", method: :delete, data: { confirm: "Are you sure you want to leave the queue?" } %>
   </div>
