I added navbar to create store and change button on home page

--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -1,3 +1,5 @@
+<%= render 'shared/navbar' %>
+
 <div class="container pt-5">
   <div class="row">
     <div class="show-image col-12 mx-auto text-center">
