added background color to user pages only

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
 
   </head>
 
-  <body>
+  <body class="<%= current_user ? 'background-user' : 'background-customer' %>">
     <%= yield %>
   </body>
 </html>
