--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,7 +1,11 @@
 // Specific CSS for your home-page
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 
-body {
+.background-user {
+  background: #E8DFF8;
+}
+
+.background-customer {
   background-color: #F8F8FD;
 }
 
