changed grey button to purple outline

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -39,7 +39,7 @@
 </div>
 
 <div class="partner-btn">
-  <div class="btn-grey">
-    <%= link_to "Partner with us", new_store_path, class: "btn-grey" %>
+  <div class="btn-purple-outline">
+    <%= link_to "Partner with us", new_store_path, class: "btn-text" %>
   </div>
 </div>
