--- a/app/assets/stylesheets/pages/_stores-home.scss
+++ b/app/assets/stylesheets/pages/_stores-home.scss
@@ -18,19 +18,27 @@
   justify-content: center;
 }
 
-.btn-grey {
-  color: #2F2E41;
-  background-color: #CCCCCC;
-  font-size: 24px;
-  font-family: 'Quicksand', sans-serif;
-  font-weight: bold;
-  text-align: center;
+.btn-purple-outline {
+  background-color: transparent;
+  border: 3px solid #7C2DF8;
   border-radius: 50px;
   height: 55px;
   width: 290px;
   vertical-align: middle;
-  line-height: 55px;
+  line-height: 47px;
   white-space: nowrap;
+}
+
+.btn-text {
+  color: #2F2E41;
+  font-size: 24px;
+  font-family: 'Quicksand', sans-serif;
+  font-weight: bold;
+  text-align: center;
+}
+
+a:hover {
+  text-decoration: none;
 }
 
 .container p {
